--- a/app/views/projects/_payment_modal.html.erb
+++ b/app/views/projects/_payment_modal.html.erb
@@ -1,15 +1,23 @@
 <div class="modal fade" id="paymentModal" tabindex="-1" aria-labelledby="paymentModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="paymentModalLabel">Payment Summary</h5>
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content shadow">
+      
+      <div class="modal-header bg-light border-bottom-0">
+        <h5 class="modal-title fw-bold" id="paymentModalLabel">Payment Summary</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
+
       <div class="modal-body">
-        <p>Total Amount Due: <strong data-payment-target="amount">$0.00</strong></p>
+        <p class="fs-5 text-center">
+          Total Amount Due:
+          <strong data-payment-target="amount" class="text-success">$0.00</strong>
+        </p>
       </div>
-      <div class="modal-footer">
-        <button type="submit" class="btn btn-primary">Confirm & Submit</button>
+
+      <div class="modal-footer justify-content-center">
+        <button type="submit" class="btn btn-primary px-4">
+          Confirm & Submit
+        </button>
       </div>
     </div>
   </div>
